--- a/projekt/package.json
+++ b/projekt/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
     "core-js": "^2.6.5",
+    "express": "^4.17.0",
+    "mongoose": "^5.5.11",
+    "morgan": "^1.9.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -35,4 +40,3 @@
     "last 2 versions"
   ]
 }
-
