Moved randomizer server to projekt directory

--- a/projekt/package.json
+++ b/projekt/package.json
@@ -5,30 +5,47 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "concurrently -c \"yellow.bold,green.bold,cyan.italic\" -n \"SERVER,VUE,RANDOMIZER\" \"nodemon --watch ./server server\" \"vue-cli-service serve\" \"json-server randomizer/index.js\""
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "core-js": "^2.6.5",
-    "express": "^4.17.0",
-    "mongoose": "^5.5.11",
+    "concurrently": "^4.1.0",
+    "core-js": "^2.6.9",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "faker": "^4.1.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.1",
+    "socket.io": "^2.2.0",
+    "socketio-auth": "^0.1.1",
     "vue": "^2.6.10",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3",
+    "vue-socket.io": "^3.0.7",
+    "vue-socket.io-extended": "^3.2.1",
+    "vuetify": "^1.5.16",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.4",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "json-server": "^0.15.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
   },
   "postcss": {
     "plugins": {
